# proteon-graphein

./: .gitignore  CASE.md  README.md  evident.yaml  pyproject.toml
notebooks/: 01_quickstart.ipynb
src/proteon_graphein/: __init__.py  features.py
tests/: test_features.py  test_parity.py
