[project]
name = "proteon-graphein"
version = "0.2.0"
description = "Proteon structural features (SASA, DSSP, CHARMM19+EEF1 / AMBER96 energies) as Graphein protein-graph attributes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "David Teschner" }]
keywords = ["protein", "graphein", "geometric-deep-learning", "structural-bioinformatics", "proteon"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    # v0.2.0 of proteon-graphein requires the batch_residue_sasa,
    # batch_relative_sasa, batch_atom_sasa, batch_hbond_count, and
    # batch_compute_energy primitives added in proteon 0.2.0.
    "proteon>=0.2.0",
    "numpy",
]

[project.optional-dependencies]
graphein = ["graphein", "networkx"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proteon_graphein"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
